added loginid and password

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -351,3 +351,13 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+app {
+ user {
+   username = "Toufeeq5797@gmail.com",
+   password = "Toufeeq5797@gma"
+ }
+}
+
+
+
